fix character garbling

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,6 @@
 package: .
 import:
   - package: golang.org/x/net/html
+  - package: golang.org/x/text/transform
+  - package: golang.org/x/text/encoding/japanese
   - package: github.com/syndtr/goleveldb/leveldb
