--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,8 @@
+
 dependencies:
   override:
     - go get -t -d -v ./vendor/...
     - go build -v
+test:
+  override:
+    - go test -v -race ./ogpproxy/...
