--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
 dependencies:
   override:
-    - go get -t -d -v ./vendor/...
+    - go get -t -d -v ./ogpproxy/vendor/...
     - go build -v
 test:
   override:
