Add Cache Expiration

--- a/config.production.json
+++ b/config.production.json
@@ -1,9 +1,12 @@
 {
-  "host":     "127.0.0.1",
-  "port":     8080,
-  "debug":    false,
-  "cache":    "leveldb",
-  "leveldb": {
-    "path": "cache.db"
+  "host"    : "127.0.0.1",
+  "port"    : 8080,
+  "debug"   : false,
+  "cache"   : {
+    "strategy"   : "leveldb",
+    "expiration" : 5
+  },
+  "leveldb" : {
+    "path" : "cache.db"
   }
 }
